smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/idl-mixins-redefine-member.flattened.smithy
$version: "2.0"

namespace smithy.example

structure MixedStructure {
    @required
    @internal
    redefineable: String
}
